crates/biome_html_parser/tests/html_specs/ok/svelte/directives/use_multiple.svelte
<div use:tooltip use:clickOutside use:draggable={dragOptions}>
  Multiple actions
</div>
