crates/biome_html_parser/tests/html_specs/error/svelte/directives/use_invalid_expression.svelte
<div use:tooltip={>Invalid</div>
